templates/traefik/external-app-template.yaml
# 1. 映射外部 IP
apiVersion: v1
kind: Service
metadata:
  name: <REPLACE_APP_NAME>-external
  namespace: traefik
spec:
  ports:
    - port: 80                  # Traefik 转发到的端口
      targetPort: 80            # 外部设备真实的端口
---
apiVersion: v1
kind: Endpoints
metadata:
  name: <REPLACE_APP_NAME>-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.1.X         # 外部设备的真实内网 IP
    ports:
      - port: 80                # 外部设备的真实内网端口

---
# 2. 暴露给外网/内网域名
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: <REPLACE_APP_NAME>-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<REPLACE_SUBDOMAIN>.k3s.besthomelab.tech`)
      kind: Rule
      services:
        - name: <REPLACE_APP_NAME>-external
          port: 80
          # 如果外部设备本身就是 HTTPS（如 PVE/OPNsense），请开启下面这行
          # scheme: https 
  tls: {}
